--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Desenhos</a>
-                <a href="#">Animes Dublados</a>
-                <a href="#">Animes Legendados</a>
+                <a href="#">Animes</a>
                 <a href="#">Filmes</a>
             </nav>
         </div>
     </header>
 
     <main>
-        <div class="anime-principal">
+        <div class="anime-principal">     
             <div class="container">
                 <h3 class="titulo"> Naruto</h3>
                 <p class="descricao"> Naruto é um jovem orfão que sonha em ser o hokage da vila da Folha<br>para ser respeitado por todos aqueles que o menosprezam.</p>
@@ -31,9 +30,11 @@
 
             <div class="botoes">
             <button class="botao">
+                <i class="fas fa-play"></i>
                 ASSISTIR AGORA
             </button>
             <button class="botao">
+                <i class="fas fa-info-circle"></i>
                 MAIS INFORMAÇÕES
             </button>
             </div>
@@ -43,5 +44,10 @@
 
     <footer>
     </footer>
+
+    <script src="https://kit.fontawesome.com/55317b30e3.js" crossorigin="anonymous"></script>
+
 </body>
+
+
 </html>
