--- a/filme/filme.html
+++ b/filme/filme.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Armesflix</title>
-    <link rel="stylesheet" href="desenho.css">
+    <meta name="viewport" content="width=1, initial-scale=1.0">
+    <title>ArmesFlix</title>
+    <link rel="stylesheet" href="filme.css">
     <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,16 +20,5 @@
             </nav>
         </div>
     </header>
-
-    <main>
-        <div class="desenho-principal">
-            <div class="container">
-                <h3 class="titulo">
-                    <img src="imgs/Masha.png">
-                </h3>
-            </div>
-        </div>
-
-    </main>
 </body>
 </html>
