--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="principal">
             <h2 class="logo">Armesflix</h2>
             <nav>
-                <a href="#">Inicio</a>
+                <a href="/index.html">Inicio</a>
                 <a href="/desenho/desenho.html">Desenhos</a>
-                <a href="#">Animes</a>
-                <a href="#">Filmes</a>
+                <a href="/index.html">Animes</a>
+                <a href="/filme/filme.html">Filmes</a>
             </nav>
         </div>
     </header>
