--- a/desenho/desenho.html
+++ b/desenho/desenho.html
@@ -28,8 +28,19 @@
                     <img src="imgs/Masha.png">
                 </h3>
             </div>
+            <div class="botoes">
+                <button class="botao">
+                    <i class="fas fa-play"></i>
+                    ASSISTIR AGORA
+                </button>
+                <button class="botao">
+                    <i class="fas fa-info-circle"></i>
+                    MAIS INFORMAÇÕES
+                </button>
+                </div> 
         </div>
-
     </main>
+
+    <script src="https://kit.fontawesome.com/55317b30e3.js" crossorigin="anonymous"></script>
 </body>
 </html>
